# azure_dynamic_batching_simulator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
src/: main.py  score.py
tests/: locustfile.py
